# Python-projects

./: .gitignore  README.md
01-websockets/: README.md  client.py  connection_manager.py  models.py  server.py
02-sqlalchemy/: README.md  crud.py  database.py  main.py  models.py  queries.py  requirements.txt
03-async-python/: README.md  basics.py  main.py  patterns.py  requirements.txt  tasks.py
04-alembic/: README.md  alembic.ini  commands.md  database.py  models.py  requirements.txt
05-fastapi-gateway/: README.md
06-etl-pipeline/: README.md  pipeline.py  requirements.txt
07-parallel-processing/: README.md  cpu_bound.py
08-testing/: README.md  requirements.txt
09-postgresql/: README.md  schema.sql  transactions.py
1 - Beginner/1.1 - Task Manager/: Makefile  README.md  TESTING_GUIDE.md  main.py  pyproject.toml  requirements.txt  test_task_manager.py
1 - Beginner/1.1 - Task Manager/data/: task_manager.db  tasks.db
1 - Beginner/1.1 - Task Manager/src/: task_manager.py  utils.py
1 - Beginner/1.1 - Task Manager/task_manager/: __init__.py  cli.py  display.py  models.py  repository.py  service.py
1 - Beginner/1.1 - Task Manager/tasks/: task_manager.db  tasks.json
1 - Beginner/1.1 - Task Manager/tests/: test_models.py  test_repository.py  test_service.py
1 - Beginner/1.2 - API/: README.md  pyproject.toml
1 - Beginner/1.2 - API/configs/: sites.yaml
1 - Beginner/1.2 - API/tests/: test_exceptions.py  test_integration.py  test_models.py  test_retry.py  test_storage.py
1 - Beginner/1.2 - API/web_scraper/: __init__.py  __main__.py  async_scraper.py  cli.py  config.py  crawler.py  exceptions.py  models.py  parser.py  scraper.py
1 - Beginner/1.2 - API/web_scraper/storage/: __init__.py  base.py  sqlite_storage.py
1 - Beginner/1.2 - API/web_scraper/utils/: __init__.py  logger.py  rate_limiter.py  retry.py  robots.py  user_agents.py
1.1 - Task Manager/: Makefile
1.2 - Web Scraper/: requirements.txt
1.3 - API Client/: Makefile
10-celery/: README.md  celery_app.py  client.py  requirements.txt
11-apscheduler/: README.md  basic_scheduler.py  triggers.py  (+2 more)
Phase - 1/1.3 - API Client/: .env.example  README.md  pyproject.toml
Phase - 1/1.3 - API Client/examples/: authentication.py  stress_test.py
Phase - 1/1.3 - API Client/github_client/: __main__.py  cli.py  config.py
Phase - 1/1.3 - API Client/github_client/endpoints/: __init__.py  base.py  gists.py  issues.py  orgs.py  pulls.py  repos.py  users.py
Phase - 1/1.3 - API Client/github_client/utils/: __init__.py  cache.py  http.py  logger.py  pagination.py
Phase - 1/1.3 - API Client/tests/: conftest.py
Phase - 1/1.3 - API Client/tests/integration/: __init__.py
Phase - 1/1.3 - API Client/tests/unit/: __init__.py  test_models.py  test_retry.py
Phase - 2/2.1 - REST API/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start.sh
Phase - 2/2.1 - REST API/app/: __init__.py  __main__.py  config.py  database.py  main.py
Phase - 2/2.1 - REST API/app/api/: deps.py
Phase - 2/2.1 - REST API/app/api/v1/: auth.py  bookmarks.py  collections.py  health.py  router.py  tags.py  users.py
Phase - 2/2.1 - REST API/app/core/: __init__.py  exceptions.py  middleware.py  security.py
Phase - 2/2.1 - REST API/app/models/: __init__.py  base.py  bookmark.py  collection.py  tag.py  user.py
Phase - 2/2.1 - REST API/app/repositories/: __init__.py  base.py  bookmark.py  collection.py  tag.py  user.py
Phase - 2/2.1 - REST API/app/schemas/: __init__.py  auth.py  base.py  bookmark.py  collection.py  tag.py  user.py
Phase - 2/2.1 - REST API/app/services/: __init__.py  auth.py  bookmark.py  collection.py  tag.py  user.py
Phase - 2/2.1 - REST API/app/utils/: __init__.py  metadata.py
Phase - 2/2.1 - REST API/docs/adr/: 000-template.md  001-framework-selection.md  002-database-and-orm.md  003-authentication-strategy.md  004-project-structure.md  005-error-handling.md
Phase - 2/2.1 - REST API/examples/: test_live_api.py
Phase - 2/2.1 - REST API/migrations/: env.py
Phase - 2/2.1 - REST API/migrations/versions/: 20260119_160035_e8724ae51d8b_initial_schema.py
Phase - 2/2.1 - REST API/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_collections.py  test_tags.py
Phase - 2/2.2 - ETL Data Pipeline/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
Phase - 2/2.2 - ETL Data Pipeline/configs/: logging.yaml  pipeline.yaml
Phase - 2/2.2 - ETL Data Pipeline/data/jobs/: job_store.db
Phase - 2/2.2 - ETL Data Pipeline/data/metrics/: metrics_history.jsonl  pipeline_metrics.json
Phase - 2/2.2 - ETL Data Pipeline/data/output/: README.md  etl_output.db
Phase - 2/2.2 - ETL Data Pipeline/data/raw/: README.md  weather.csv  weather_sample.csv
Phase - 2/2.2 - ETL Data Pipeline/docs/adr/: 000-template.md  001-orchestration-strategy.md  002-data-sources.md  003-transformation-framework.md  004-error-handling.md  005-storage-strategy.md  006-testing-strategy.md
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  stress_test.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/extractors/: __init__.py  base.py  csv_extractor.py  github_extractor.py  sqlite_extractor.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/loaders/: __init__.py  base.py  postgres_loader.py  sqlite_loader.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/monitoring/: __init__.py  alerts.py  health.py  metrics_collector.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/orchestration/: __init__.py  job_store.py  pipeline.py  scheduler.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/transformers/: __init__.py  base.py  cleaners.py  normalizer.py  validators.py
Phase - 2/2.2 - ETL Data Pipeline/etl_pipeline/utils/: __init__.py  logging.py  metrics.py  retry.py
Phase - 2/2.2 - ETL Data Pipeline/tests/: __init__.py  conftest.py  test_extractors.py  test_loaders.py  test_metrics.py  test_models.py  test_monitoring.py  test_pipeline_integration.py  test_scheduler.py  test_transformers.py
(+111 files in other folders)
