[project]
name = "multi-source-web-scraper"
version = "1.0.0"
description = "A scraper that extracts data from multiple websites and handles real-world challenges"
requires-python = ">=3.11"
dependencies = [
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "bandit",
    "pip-audit",
    "pytest-cov",
]

[project.scripts]


# ============================================================================
# RUFF - Fast Python Linter & Formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["web_scrapper", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments (common in CLI apps)
    "PLR2004",  # Magic value comparison (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tabulate"]
ignore_missing_imports = true

# ============================================================================
# BANDIT - Security Scanner
# ============================================================================
[tool.bandit]
targets = ["web_scrapper"]
exclude_dirs = ["tests", "configs", "data"]
skips = ["B101"]  # Skip assert warnings (used in tests)

# ============================================================================
# PYTEST - Test Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["web_scrapper"]
branch = true
omit = ["web_scrapper/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
