[project]
name = "etl-pipeline"
version = "0.1.0"
description = "An automated ETL pipeline with scheduling, monitoring, and graceful failure handling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bhanu Prasanna" }]
keywords = ["etl", "data-pipeline", "async", "scheduling"]

dependencies = [
    # Data processing
    "polars",
    "pandas",  # Fallback for edge cases
    # Validation
    "pydantic",
    "pydantic-settings",
    # HTTP client for API extraction
    "httpx",
    # Database
    "sqlalchemy",
    "asyncpg",
    "aiosqlite",
    "alembic",
    # Scheduling
    "apscheduler",
    # CLI
    "typer",
    "rich",
    # Configuration
    "pyyaml",
    # Async utilities
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    # For testing HTTP
    "respx",
]

[project.scripts]
etl_pipeline = "etl_pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl_pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["etl_pipeline", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B027",   # empty method in abstract class (intentional for optional override)
]

[tool.ruff.lint.isort]
known-first-party = ["etl_pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
disable_error_code = ["prop-decorator"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.coverage.run]
source = ["etl_pipeline"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
